--- a/common/.github/ISSUE_TEMPLATE/FeatureRequest.yml.liquid
+++ b/common/.github/ISSUE_TEMPLATE/FeatureRequest.yml.liquid
@@ -1,6 +1,6 @@
 ---
 name: '💡 Feature Request'
-description: Request a new feature or an improvement to an existing one
+description: Request a new feature or an improvement to an existing one.
 labels: [question]
 body:
   - type: markdown
@@ -33,8 +33,8 @@ body:
     attributes:
       value: |
         ## :heart: Love Megabyte Labs?
-        
-        Please consider donating so we sustain our projects.
+
+        If you find **[Megabyte Labs]({{link.home}})** projects useful, please consider donating so we sustain our projects:
 
         <a title="Support us on Open Collective" href="{{ profile_link.opencollective }}/{{ profile.opencollective }}" target="_blank">
           <img alt="Open Collective sponsors" src="https://img.shields.io/opencollective/sponsors/megabytelabs?logo=opencollective&label=OpenCollective&logoColor=white&style={{ badge_style }}" />
