--- a/common/.github/ISSUE_TEMPLATE/SupportRequest.yml.liquid
+++ b/common/.github/ISSUE_TEMPLATE/SupportRequest.yml.liquid
@@ -1,5 +1,5 @@
-name: 'ℹ️ Support Request'
-description: Find out how to get answers and/or submit a support request
+name: '⛑️ Support Request'
+description: Find out how to get answers and/or submit a support request.
 labels: [question]
 body:
   - type: markdown
@@ -16,7 +16,7 @@ body:
   - type: textarea
     id: support
     attributes:
-      label: '💡 Support Request'
+      label: '⛑️ Support Request'
       description: Add your support request here. Detail exactly what you need help with.
     validations:
       required: true
@@ -35,7 +35,7 @@ body:
   - type: input
     id: contributor
     attributes:
-      label: '📇 How can we contact you?'
+      label: '💬 How can we contact you?'
       description: '**Optional** Add a way we can contact you here (especially if you want us to contact you immediately for paid support).'
       placeholder: 'Twitter: @MegabyteLabs, E-mail: help@megabyte.space, etc.'
     validations:
@@ -46,7 +46,7 @@ body:
       value: |
         ## :heart: Love Megabyte Labs?
 
-        Please consider donating so we sustain our projects.
+        If you find **[Megabyte Labs]({{link.home}})** projects useful, please consider donating so we sustain our projects:
 
         <a title="Support us on Open Collective" href="{{ profile_link.opencollective }}/{{ profile.opencollective }}" target="_blank">
           <img alt="Open Collective sponsors" src="https://img.shields.io/opencollective/sponsors/megabytelabs?logo=opencollective&label=OpenCollective&logoColor=white&style={{ badge_style }}" />
