--- a/common/.github/ISSUE_TEMPLATE/config.yml.liquid
+++ b/common/.github/ISSUE_TEMPLATE/config.yml.liquid
@@ -6,4 +6,4 @@ contact_links:
     about: Join our community on Slack. Get answers and share ideas with kindreds.
   - name: '📟 Paid Support'
     url: https://megabyte.space/support
-    about: For the fastest, most-thorough solutions to issues, we offer paid support.
+    about: For the fastest, most-thorough solutions we encourage you to consider paid support.
