--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -86,7 +86,8 @@
   "prettier": "prettier-config-sexy-mode",
   "private": false,
   "publishConfig": {
-    "access": "{{npm_publish_config_access}}"
+    "access": "{{npm_publish_config_access}}",
+    "@megabyte:registry": "https://gitlab.com/api/v4/projects/{{gitlab_project_id}}/packages/npm/"
   },
   "release": {
     "branches": [
