Update common/Taskfile.yml.liquid, common/.config/taskfiles/ansible/Taskfile-test.yml, common/.config/taskfiles/install/Taskfile-go.yml, common/.config/taskfiles/install/Taskfile-github.yml, common/.config/taskfiles/install/Taskfile-software.yml, common/.gitlab/ci/scripts/update-init.sh

--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -36,6 +36,9 @@ vars:
   SEMANTIC_CONFIG: semantic-release-config
   TIMEZONE: America/New_York
 
+env:
+  SENTRY_DSN: {{#if sentryDSN}}{{sentryDSN}}{{else}}''{{/if}}
+
 includes:
   project:
     taskfile: Taskfile-project.yml
