--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -388,6 +388,37 @@ tasks:
       - task: boilerplate:check:package
       - task: boilerplate:clean
 
+  reset:
+    desc: Resets the project by removing all caches and then re-generating templated files
+    summary: |
+      # Reset Project and Re-Generate Assets
+
+      This task is intended to be used when there appear to be cache related issues.
+      It will first clean the project by removing common local libraries like `node_modules/`
+      and the `.cache/` folder, to name a couple. Then, without acquiring any upstream
+      updates, it re-generates any templated files.
+    cmds:
+      - task: common:reset
+
+  reset:force:
+    desc: 'Aggressively reset the project (**WARNING** This will wipe uncommitted work)'
+    summary: |
+      # Aggressively Reset Project
+
+      This task will completely wipe the project by:
+      
+      1. Resetting to the HEAD
+      2. Removing all files that are not included in source control (i.e. `node_modules/` etc.)
+      3. Pulling the latest changes from `master`
+      
+      This task is essentially the equivalent of deleteing the project and re-cloning it.
+    prompt:
+      type: confirm
+      message: Are you sure you want to forcefully reset the project?
+      answer:
+        cmds:
+          - task: common:reset:force
+
   scripts:
     interactive: true
     deps:
