--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -27,7 +27,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-emoji-conventional"
+      "path": "node_modules/git-cz-emoji"
     }
   },
   "dependencies": {},
@@ -35,8 +35,8 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^16.0.0",
     "@washingtondc/development": "latest",
-    "cz-emoji-conventional": "^1.0.1",
     "eslint-config-strict-mode": "latest",
+    "git-cz-emoji": "latest",
     "glob": "^7.2.0",
     "handlebars-helpers": "^0.10.0",
     "prettier-config-sexy-mode": "latest",
@@ -67,6 +67,7 @@
     "**/!(logo).(jpg|png)": ["task image:compress --"],
     "**/*.(js|jsx|ts|tsx)": ["task fix:js --", "task lint:js --"],
     "**/*.json": ["task fix:json --"],
+    "**/*.py": ["task fix:python --", "task lint:python --"],
     "**/*.sh": ["task lint:shell --"],
     "**/*.toml": ["task lint:toml --"],
     "**/*.xml": ["task fix:xml --", "task lint:xml --"],
