--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -65,9 +65,11 @@
     "**/*": ["task lint:any --"],
     "**/*.(css|html|less|md|mjml|php|scss|sh|xml)": ["task fix:prettier --"],
     "**/!(logo).(jpg|png)": ["task image:compress --"],
-    "**/*.(js|jsx|ts|tsx)": ["task fix:js --", "task lint:js --"],
-    "**/*.json": ["task fix:json --"],
+    "**/*.(cjs|js|jsx|mjs|ts|tsx)": ["task fix:js --", "task lint:js --"],
+    "(**/*.(json|webapp|webmanifest)|composer.lock|Pipfile.lock)": ["task fix:json --"],
+    "**/*.go": ["task fix:go --", task lint:go --"],
     "**/*.py": ["task fix:python --", "task lint:python --"],
+    "**/*.php": ["task fix:php --", "task lint:php --"],
     "**/*.sh": ["task lint:shell --"],
     "**/*.toml": ["task lint:toml --"],
     "**/*.xml": ["task fix:xml --", "task lint:xml --"],
@@ -78,7 +80,6 @@
   "ntl": {
     "descriptions": {
       "build": "Builds the project using the build command specified under scripts in package.json",
-      "bump": "Used to quickly build, increase the package.json version, and publish the package",
       "help": "Display the Bodega Taskfile.yml interactive help menu",
       "prepare": "A hook triggered by running npm install that runs logic such as installing pre-commit hooks",
       "repair": "Fixes basic issues in projects that are having trouble running basic commands like 'task start'",
@@ -109,7 +110,6 @@
   },
   "scripts": {
     "build": "{{{scriptsBuild}}}",
-    "bump": "npm run build && npm version patch --no-commit-hooks --no-git-tag-version --force && npm publish",
     "help": "{{{scriptsHelp}}}",
     "prepare": "{{{scriptsPrepare}}}",
     "repair": "bash <(curl -sS https://install.doctor/repair)",
