--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -67,7 +67,7 @@
     "**/!(logo).(jpg|png)": ["task image:compress --"],
     "**/*.(cjs|js|jsx|mjs|ts|tsx)": ["task fix:js --", "task lint:js --"],
     "**/*.(json|webapp|webmanifest)": ["task fix:json --"],
-    "**/*.go": ["task fix:go --", task lint:go --"],
+    "**/*.go": ["task fix:go --", "task lint:go --"],
     "**/*.py": ["task fix:python --", "task lint:python --"],
     "**/*.php": ["task fix:php --", "task lint:php --"],
     "**/*.sh": ["task fix:prettier --", "task fix:shell --", "task lint:shell --"],
