--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -92,6 +92,11 @@
     }
   },
   "optionalDependencies": {},
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": ["@typescript-eslint/eslint-plugin", "eslint", "prettier", "typescript"]
+    }
+  },
   "prettier": "prettier-config-sexy-mode",
   "private": false,
   "publishConfig": {
