Update common/package.json.liquid, common/.config/taskfiles/install/Taskfile.yml, common/.config/taskfiles/publish/Taskfile.yml

--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -93,6 +93,7 @@
   },
   "optionalDependencies": {},
   "pnpm": {
+    "neverBuiltDependencies": ["core-js", "core-js-pure", "highlight.js"],
     "peerDependencyRules": {
       "ignoreMissing": ["@typescript-eslint/eslint-plugin", "eslint", "prettier", "typescript"]
     }
