--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -43,10 +43,10 @@ vars:
 env:
   OSTYPE:
     sh: |
-      {{if eq OS "linux"}}LINUX_FLAVOR='linux-gnu'
+      {{if (eq OS "linux")}}LINUX_FLAVOR='linux-gnu'
       LIBC=$(ldd /bin/ls | grep 'musl' | head -1 | cut -d ' ' -f1)
       if [ -n "$LIBC" ]; then LINUX_FLAVOR='linux-musl'; fi{{end}}
-      echo "\{{if eq OS "linux"}}$LINUX_FLAVOR\{{else}}darwin\{{end}}"
+      echo "\{{if (eq OS "linux")}}$LINUX_FLAVOR\{{else}}darwin\{{end}}"
   SENTRY_DSN: {{#if sentryDSN}}{{sentryDSN}}{{else}}''{{/if}}
 
 includes:
