--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -43,9 +43,9 @@ vars:
 env:
   OSTYPE:
     sh: |
-      {{if (eq OS "linux")}}LINUX_FLAVOR='linux-gnu'
+      \{{if (eq OS "linux")}}LINUX_FLAVOR='linux-gnu'
       LIBC=$(ldd /bin/ls | grep 'musl' | head -1 | cut -d ' ' -f1)
-      if [ -n "$LIBC" ]; then LINUX_FLAVOR='linux-musl'; fi{{end}}
+      if [ -n "$LIBC" ]; then LINUX_FLAVOR='linux-musl'; fi\{{end}}
       echo "\{{if (eq OS "linux")}}$LINUX_FLAVOR\{{else}}darwin\{{end}}"
   SENTRY_DSN: {{#if sentryDSN}}{{sentryDSN}}{{else}}''{{/if}}
 
@@ -325,6 +325,53 @@ tasks:
         fi
       - nodemon --config \{{if .CLI_ARGS}}\{{.CLI_ARGS}}\{{else}}.config/nodemon.json\{{end}}
 
+  publish:
+    desc: Publish a semantic release via `semantic-release`
+    summary: |
+      # Publish the Project
+
+      Using this task, you can publish a project to all its targets. The targets
+      depend on the project type. Most projects will include:
+
+      1. Updating version numbers in `package.json`, `pyproject.toml`, etc.
+      2. Adding a new git tag at the version and publishing it with updated assets
+      3. Publishing repository-specific items like NPM packages, PyPi packages, etc.
+      4. Publishing artifacts to GitLab Releases and GitHub Releases
+      5. Updating the `docs/CHANGELOG.md`
+
+      ## Packages Used
+
+      This task runs `semantic-release` using the `semantic-release-config` package. The package
+      includes release instructions for:
+
+      1. Python packages
+      2. NPM packages
+      3. Dockerfile projects
+      4. Go projects
+      5. Ansible roles
+
+      ## Formats
+
+      It does its best to ship projects out in as many formats (that make sense) as possible.
+      For instance, an NPM CLI gets published as:
+
+      1. NPM package
+      2. Binaries (including deb and rpm) available on GitHub/GitLab releases
+      3. Brew formulae
+      4. Snapcraft
+      5. Probably more implemented after writing this
+
+      ## Python Package Notes
+
+      If `setup.cfg` is present, then the project is assumed to be a legacy Python
+      project that needs to run in environment with access to the `python-semantic`
+      extras defined in `pyproject.toml`.
+    log:
+      error: Error forcing a Semantic release via `task publish`
+      start: Manually forcing a Semantic release via `task publish`
+      success: Successfully released the next version via `task publish`
+    cmds:
+      - task: publish:semantic-release
 {{#eq group 'ansible'}}{{#eq subgroup 'playbook'}}
   playbook:
     desc: Run the playbook
