Update common/pyproject.toml.liquid, common/.config/taskfiles/fix/Taskfile.yml, common/package.json.liquid

--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -72,7 +72,7 @@
     "**/*.py": ["task fix:python --", "task lint:python --"],
     "**/*.php": ["task fix:php --", "task lint:php --"],
     "**/*.sh": ["task fix:prettier --", "task fix:shell --", "task lint:shell --"],
-    "**/*.toml": ["task fix:prettier --", "task lint:toml --"],
+    "**/*.toml": ["task fix:toml --", "task fix:prettier --", "task lint:toml --"],
     "**/*.xml": ["task fix:xml --", "task lint:xml --"],
     "**/*.(yml|yaml)": ["task fix:yaml --", "task lint:yaml --"],
     "(Brewfile|composer.lock|Gemfile|Gopkg.lock|Pipfile.lock)": ["task fix:prettier --"],
