--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -94,12 +94,11 @@
   "pnpm": {
     "allowedVersions": {
       "@typescript-eslint/eslint-plugin": "5",
-      "eslint": "8",
       "typescript": "4"
     },
     "neverBuiltDependencies": ["core-js", "core-js-pure", "highlight.js"],
     "peerDependencyRules": {
-      "ignoreMissing": ["@typescript-eslint/eslint-plugin", "eslint", "prettier", "typescript"]
+      "ignoreMissing": ["eslint", "prettier"]
     }
   },
   "prettier": "prettier-config-sexy-mode",
