--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -61,6 +61,7 @@
     "**/*.(cjs|js|jsx|mjs|ts|tsx)": ["task fix:js --", "task lint:js --"],
     "**/*.(json|webapp|webmanifest)": ["task fix:json --"],
     "**/*.go": ["task fix:go --", "task lint:go --"],
+    "**/*.md": ["task fix:markdown --", "task lint:spelling:markdown --"],
     "**/*.py": ["task fix:python --", "task lint:python --"],
     "**/*.php": ["task fix:php --", "task lint:php --"],
     "**/*.sh": ["task fix:prettier --", "task fix:shell --", "task lint:shell --"],
