--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -51,12 +51,13 @@ env:
   SENTRY_DSN: {{#if sentryDSN}}{{sentryDSN}}{{else}}''{{/if}}
 
 includes:
-  project:
-    taskfile: ./local/Taskfile-project.yml
+{{#forEach (bodegaIncludes)}}
+  {{key}}:{{#if (not optional)}} {{taskPath}}{{/if}}
+  {{#if optional}}
+    taskfile: {{taskPath}}
     optional: true
-{{#each (taskfileSort (glob './.config/taskfiles/**/*.yml'))}}
-  {{remove (remove (remove (replace (remove this "./.config/taskfiles/") "/Taskfile-" ":") "/Taskfile.yml") "Taskfile-") ".yml"}}: {{this}}
-{{/each}}
+  {{/if}}
+{{/forEach}}
 
 profile: |
   PATH="$PATH:$HOME/.local/bin:$HOME/.poetry/bin"
