--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -346,6 +346,10 @@ tasks:
         fi
       - nodemon --config \{{if .CLI_ARGS}}\{{.CLI_ARGS}}\{{else}}.config/nodemon.json\{{end}}
 
+  new:project:
+    cmds:
+      - task: prepare
+
   publish:
     desc: Publish a semantic release via `semantic-release`
     summary: |
