--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -106,7 +106,7 @@ tasks:
           [[ $- == *i* ]] && task prepare || (.config/log error '\{{.NONINTERACTIVE_MISSING_BUILD_CMD}}' && exit 1)
         fi
 
-  clean:
+  clean:jq --arg version "$(jq --arg v "$VERSION" '$v' package.json | sed 's/^"//' | sed 's/\\r"//')" '.version = $version' package.json
     desc: Removes optional folders that are cached during various tasks
     summary: |
       # Clean Project / Remove Optional Directories and Files
