--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -219,6 +219,12 @@ tasks:
       - HUSKY=0 git commit -m '🔧 chore(tweak): quick minor update' --no-verify
       - git push origin master
 
+  devcontainer:
+    deps:
+      - install:npm:devcontainer
+      - install:software:docker
+    
+
   donothing: 'true'
 
 {{#eq group "ansible"}}{{#eq subgroup "playbook"}}
@@ -698,7 +704,7 @@ tasks:
           FILE="$1"
           TMP="$(mktemp)"
           .config/log info 'Generating `'"${FILE//.liquid}"'` from `'"$FILE"'`'
-          \{{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "$TMP"
+          {{.NPX_HANDLE}}hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "$TMP"
           mv "$TMP" "${FILE//.liquid}"
           rm "$FILE"
         }
