--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -23,7 +23,7 @@ vars:
   GITHUB_ORG: {{profile.github}}
   GITHUB_USER: {{profile.github}}
   GROUP_EXEC_ASYNC: 'false'
-  IGNORE_FOLDERS: >
+  IGNORE_FOLDERS: >-
     -path './.autodoc/*' -o -path './.cache/*' -o -path './.common*' -o -path './.config/*' -o -path './.git/*'
     -o -path './.github/*' -o -path './.gitlab/*' -o -path './.husky/*' -o -path './.modules/*' -o -path './.npm/*'
     -o -path './.pnpm-store/*' -o -path './.shared/*' -o -path './.task/*' -o -path './.venv/*' -o -path './.vscode/*'
