--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -40,8 +40,8 @@ vars:
   # yamllint disable rule:line-length
   PROJECT_TYPE:
     sh: |
-      if type jq &> /dev/null && [ -f package.json ]; then VER="$(jq -r '.blueprint.group' package.json)"; if [ "$VER" == 'null' ]; then echo TYPE="{{group}}"; else TYPE="$VER"; fi; else TYPE="{{group}}"; fi
-      if type jq &> /dev/null && [ -f package.json ]; then VER="$(jq -r '.blueprint.subgroup' package.json)"; if [ "$VER" == 'null' ]; then SUBTYPE="{{subgroup}}"; else SUBTYPE="$VER"; fi; else SUBTYPE="{{subgroup}}"; fi
+      if type jq &> /dev/null && [ -f package.json ]; then VER="$(jq -r '.blueprint.group' package.json)"; if [ "$VER" == 'null' ]; then echo TYPE="$GROUP_TYPE"; else TYPE="$VER"; fi; else TYPE="$GROUP_TYPE"; fi
+      if type jq &> /dev/null && [ -f package.json ]; then VER="$(jq -r '.blueprint.subgroup' package.json)"; if [ "$VER" == 'null' ]; then SUBTYPE="$REPOSITORY_TYPE"; else SUBTYPE="$VER"; fi; else SUBTYPE="$REPOSITORY_TYPE"; fi
       if [ "$TYPE" == 'common' ] && [ "$SUBTYPE" == 'shared' ]; then
         echo 'shared'
       elif [ "$TYPE" == 'common' ]; then
@@ -58,19 +58,21 @@ vars:
   PYTHON_VIRTUALENV: true
   REPOSITORY_SUBTYPE:
     sh: |
+      if [ -n "$REPOSITORY_TYPE" ]; then REPO_SUBTYPE="$REPOSITORY_TYPE"; fi
       if type jq &> /dev/null && [ -f package.json ]; then
         VER="$(jq -r '.blueprint.subgroup' package.json)"
-        if [ "$VER" == 'null' ]; then echo "{{subgroup}}"; else echo "$VER"; fi
+        if [ "$VER" == 'null' ]; then echo "$REPO_SUBTYPE"; else echo "$VER"; fi
       else
-        echo "{{subgroup}}"
+        echo "$REPO_SUBTYPE"
       fi
   REPOSITORY_TYPE:
     sh: |
+      if [ -n "$GROUP_TYPE" ]; then REPO_TYPE="$GROUP_TYPE"; fi
       if type jq &> /dev/null && [ -f package.json ]; then
         VER="$(jq -r '.blueprint.group' package.json)"
-        if [ "$VER" == 'null' ]; then echo "{{group}}"; else echo "$VER"; fi
+        if [ "$VER" == 'null' ]; then echo "$REPO_TYPE"; else echo "$VER"; fi
       else
-        echo "{{group}}"
+        echo "$REPO_TYPE"
       fi
   SEMANTIC_CONFIG: semantic-release-config
   TIMEZONE: America/New_York
