Update common/package.json.liquid, common/.config/codeclimate.yml, common/.config/taskfiles/install/Taskfile-apt.yml

--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -51,6 +51,10 @@
     }
   ],
   "homepage": "{{link.home}}",
+  "jscpd": {
+    "threshold": 0.1,
+    "gitignore": true
+  },
   "keywords": ["mblabs", "megabytelabs", "professormanhattan", "washingtondc"],
   "license": "{{license}}",
   "lint-staged": {
