--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -116,8 +116,7 @@
       "main",
       "master",
       "next",
-      { "name": "beta", "prerelease": true },
-      { "name": "alpha", "prerelease": true }
+      { "name": "beta", "prerelease": true }
     ],
     "extends": "semantic-release-config"
   },
