--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -199,7 +199,7 @@ tasks:
           if type npm &> /dev/null; then
             npm run build
           else
-            task {{.REPOSITORY_TYPE}}:build
+            task \{{.REPOSITORY_TYPE}}:build
           fi
         else
           [[ $- == *i* ]] && task prepare || (.config/log error '\{{.NONINTERACTIVE_MISSING_BUILD_CMD}}' && exit 1)
