--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -699,7 +699,7 @@ tasks:
     cmds:
       - task: common:update:services
     status:
-      - '[ -n "$GITLAB_CI" ] && [ "$REPOSITORY_UPDATE" != 'true' ]'
+      - '[ -n "$GITLAB_CI" ] && [ "$REPOSITORY_UPDATE" != "true" ]'
 
   shell:
     desc: Start a terminal session using Docker with any Linux operating system
