--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -205,6 +205,10 @@ tasks:
           [[ $- == *i* ]] && task prepare || (.config/log error '\{{.NONINTERACTIVE_MISSING_BUILD_CMD}}' && exit 1)
         fi
 
+  build:release:
+    cmds:
+      - task: release:build
+
   clean:
     desc: Removes optional folders that are cached during various tasks
     summary: |
@@ -636,23 +640,11 @@ tasks:
 
   prepare:
     cmds:
-      - task: \{{.REPOSITORY_TYPE}}:prepare
-    status:
-      - '[ "\{{.REPOSITORY_TYPE}}" != "ansible" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "docker" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "npm" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "packer" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "python" ]'
+      - task: release:prepare
 
   publish:
     cmds:
-      - task: \{{.REPOSITORY_TYPE}}:publish
-    status:
-      - '[ "\{{.REPOSITORY_TYPE}}" != "ansible" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "docker" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "npm" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "packer" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "python" ]'
+      - task: release:publish
 
   pull:upstream:
     desc: Pull from upstream repositories
@@ -914,10 +906,4 @@ tasks:
 
   verify:
     cmds:
-      - task: \{{.REPOSITORY_TYPE}}:verify
-    status:
-      - '[ "\{{.REPOSITORY_TYPE}}" != "ansible" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "docker" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "npm" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "packer" ]'
-      - '[ "\{{.REPOSITORY_TYPE}}" != "python" ]'
+      - task: release:verify
