--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -108,7 +108,7 @@
   "prettier": "prettier-config-sexy-mode",
   "private": false,
   "publishConfig": {
-    "@private:registry": "https://gitlab.com/api/v4/projects/{{gitlab_project_id}}/packages/npm/",
+    "@gitlab:registry": "https://gitlab.com/api/v4/projects/{{gitlab_project_id}}/packages/npm/",
     "access": "{{npm_publish_config_access}}",
     "registry": "https://registry.npmjs.org/",
     "tag": "edge"
