--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -102,7 +102,7 @@
     },
     "neverBuiltDependencies": ["core-js", "core-js-pure", "highlight.js"],
     "peerDependencyRules": {
-      "ignoreMissing": ["eslint", "prettier"]
+      "ignoreMissing": ["eslint", "prettier", "puppeteer"]
     }
   },
   "prettier": "prettier-config-sexy-mode",
