--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -143,6 +143,10 @@
     "update": "bash start.sh && task update",
     "vscode": "bash start.sh && task vscode"
   },
+  "volta": {
+    "node": "18.4.0",
+    "yarn": "2"
+  },
   "type": "{{npm_type}}",
   "version": "{{version}}"
 }
