--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -53,6 +53,7 @@
   ],
   "homepage": "{{link.home}}",
   "jscpd": {
+    "ignore": ["./config/**/*", "./docs/**/*", "README.md", "LICENSE", "Taskfile.yml", "logo.png", "package.json", "start.sh", "pnpm-lock.yaml", "local/package-lock.json", "local/yarn.lock"],
     "threshold": 0.1,
     "gitignore": true
   },
