--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -53,7 +53,7 @@
   ],
   "homepage": "{{link.home}}",
   "jscpd": {
-    "ignore": ["./config/**/*", "./docs/**/*", "README.md", "LICENSE", "Taskfile.yml", "logo.png", "package.json", "start.sh", "pnpm-lock.yaml", "local/package-lock.json", "local/yarn.lock"],
+    "ignore": [".devcontainer/**/*", ".config/**/*", ".git/**/*", ".github/**/*", ".gitlab/**/*", ".vscode/**/*", "docs/**/*", ".editorconfig", ".gitignore", ".npmrc", ".gitlab-ci.yml", "README.md", "LICENSE", "Taskfile.yml", "logo.png", "package.json", "start.sh", "pnpm-lock.yaml", "local/package-lock.json", "local/yarn.lock"],
     "threshold": 0.1,
     "gitignore": true
   },
