--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -53,8 +53,8 @@
   ],
   "homepage": "{{link.home}}",
   "jscpd": {
-    "ignore": [".devcontainer/**/*", ".config/**/*", ".git/**/*", ".github/**/*", ".gitlab/**/*", ".vscode/**/*", "docs/**/*", ".editorconfig", ".gitignore", ".npmrc", ".gitlab-ci.yml", "README.md", "LICENSE", "Taskfile.yml", "logo.png", "package.json", "start.sh", "pnpm-lock.yaml", "local/package-lock.json", "local/yarn.lock"],
-    "threshold": 3.0,
+    "ignore": ["**/.devcontainer/**/*", "**/.config/**/*", "**/.git/**/*", "**/.github/**/*", "**/.gitlab/**/*", "**/.vscode/**/*", "**/docs/**/*", ".editorconfig", ".gitignore", ".npmrc", ".gitlab-ci.yml", "README.md", "LICENSE", "Taskfile.yml", "logo.png", "package.json", "start.sh", "pnpm-lock.yaml", "local/package-lock.json", "local/yarn.lock"],
+    "threshold": 8.5,
     "gitignore": true
   },
   "keywords": ["mblabs", "megabytelabs", "professormanhattan", "washingtondc"],
