--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -53,9 +53,33 @@
   ],
   "homepage": "{{link.home}}",
   "jscpd": {
-    "ignore": ["**/.devcontainer/**/*", "**/.config/**/*", "**/.git/**/*", "**/.github/**/*", "**/.gitlab/**/*", "**/.vscode/**/*", "**/docs/**/*", ".editorconfig", ".gitignore", ".npmrc", ".gitlab-ci.yml", "README.md", "LICENSE", "Taskfile.yml", "logo.png", "package.json", "start.sh", "pnpm-lock.yaml", "local/package-lock.json", "local/yarn.lock"],
-    "threshold": 8.5,
-    "gitignore": true
+    "absolute": true,
+    "gitignore": true,
+    "ignore": [
+      "!**/.devcontainer/**/*",
+      "!**/.config/**/*",
+      "!**/.git/**/*",
+      "!**/.github/**/*",
+      "!**/.gitlab/**/*",
+      "!**/.vscode/**/*",
+      "!**/common/.config/taskfiles/**/*",
+      "!**/docs/**/*",
+      "!**/.editorconfig",
+      "!**/.gitignore",
+      "!**/.npmrc",
+      "!**/.gitlab-ci.yml",
+      "!**/README.md",
+      "!**/LICENSE",
+      "!**/Taskfile.yml",
+      "!**/logo.png",
+      "!**/package.json",
+      "!**/start.sh",
+      "!**/pnpm-lock.yaml",
+      "!**/package-lock.json",
+      "!**/yarn.lock",
+      "!**/deprecated/**/*"
+    ],
+    "threshold": 14
   },
   "keywords": ["mblabs", "megabytelabs", "professormanhattan", "washingtondc"],
   "license": "{{license}}",
