--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -76,6 +76,7 @@
       "!**/start.sh",
       "!**/pnpm-lock.yaml",
       "!**/package-lock.json",
+      "!**/pyproject.toml",
       "!**/yarn.lock",
       "!**/deprecated/**/*"
     ],
