--- a/common/package.json.liquid
+++ b/common/package.json.liquid
@@ -77,6 +77,7 @@
       "!**/pnpm-lock.yaml",
       "!**/package-lock.json",
       "!**/pyproject.toml",
+      "!**/requirements.yml",
       "!**/yarn.lock",
       "!**/deprecated/**/*"
     ],
