--- a/common/Taskfile.yml.liquid
+++ b/common/Taskfile.yml.liquid
@@ -288,7 +288,7 @@ tasks:
       - |
         task --list > /dev/null || (echo "ERROR: Invalid Taskfiles!" && exit 1)
         git add --all
-      - 'HUSKY=0 git commit -m "🔧 chore(tweak): quick minor update" --no-verify'
+      - 'HUSKY=0 git commit -m "🔧 chore(tweak) quick minor update" --no-verify'
       - git push origin master
 
   devcontainer:
@@ -554,7 +554,7 @@ tasks:
       success: Successfully published update via `task publish:force`
     cmds:
       - |
-        HUSKY=0 git commit -a --allow-empty -m '🔨 chore(bump): Forced semantic-release \{{.UPDATE_LEVEL}}' -n
+        HUSKY=0 git commit -a --allow-empty -m '🔨 chore(bump) Forced semantic-release \{{.UPDATE_LEVEL}}' -n
       - task: publish
 {{#eq group 'ansible'}}{{#eq subgroup 'playbook'}}
   playbook:
